@@ -1,3 +1,8 @@
+2000-08-08  Dan Winship  <danw@helixcode.com>
+
+	* mail-format.c (mail_generate_reply): Fix up format of addresses.
+	(write_headers): Use CamelAddress functions to simplify this.
+
 2000-08-08  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* mail-view.c: Lets get rid of the last separator in the toolbar
